# sonar-dummy-python-oss

./: .cirrus.star  .cirrus.yml  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  README.md  SECURITY.md  mise.toml  pyproject.toml  sonar-project.properties
.cirrus/: burgr-notify-promotion  cirrus_env  cirrus_promote  cirrus_promote_python  poetry.Dockerfile  poetry_build_publish  regular_poetry_build_publish  set_poetry_build_version
.github/: actionlint.yaml
.github/workflows/: PullRequestClosed.yml  PullRequestCreated.yml  RequestReview.yml  SubmitReview.yml  build.yml  pr-cleanup.yml  pre-commit.yml  re-trigger-approvals.yml  release.yml  release_dry_run.yml  slack_notify.yml  unified-dogfooding.yml
src/sonar_dummy_python_oss/: example.py
